#70 - TutorLessonPriceRangeDto에서 minPrice, maxPrice로만 dto 구성할 수 있도록 설정
ES 검색 결과(TutorDocument)를 TutorCardDto로 변환하여 프론트엔드 카드 컴포넌트에 추가,
DB 조회(N+1) 없이 즉시 뿌려주기 위한 렌더링용 필드인 lessonGoals들을 TutorDocument를 만드는데 사용